disposal section ongoing

--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
@@ -1,4 +1,5 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoAssetList
+﻿@using MODAMS.Utility;
+@model MODAMS.Models.ViewModels.Dto.dtoAssetList
 
 <div class="page-header">
     <div>
@@ -51,11 +52,24 @@
                             @{
                                 int nCounter = 0;
                                 string sCounter = "0";
+                                string sBackground = "primary";
+
                                 foreach (var asset in Model.AssetList)
                                 {
                                     nCounter++;
                                     sCounter = (nCounter < 10) ? "0" + nCounter.ToString() : nCounter.ToString();
-
+                                    switch (asset.AssetStatusId)
+                                    {
+                                        case SD.Asset_Available:
+                                            sBackground = "primary";
+                                            break;
+                                        case SD.Asset_Disposed:
+                                            sBackground = "secondary";
+                                            break;
+                                        case SD.Asset_HandedOver:
+                                            sBackground = "info";
+                                            break;
+                                    }
                                     <tr>
                                         <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
                                         <td class="text-muted fs-15 fw-semibold">@asset.SubCategory.SubCategoryName</td>
@@ -67,7 +81,7 @@
                                         <td class="text-muted fs-15 fw-semibold">@asset.Store.Name</td>
                                         <td class="text-muted fs-15 fw-semibold">
                                             <span class="text-primary">
-                                                <span class="mb-0 mt-1 badge rounded-pill bg-primary-transparent text-info">
+                                                <span class="mb-0 mt-1 badge rounded-pill bg-@sBackground-transparent text-@sBackground">
                                                     @asset.AssetStatus.StatusName
                                                 </span>
                                             </span>
