--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -102,11 +102,11 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
-                            <h6 class="text-bold text-secondary">Transferred</h6>
-                            <span class="text-secondary text-bold">@Model.TransferredAssets</span>
+                            <h6 class="text-bold text-success">Transferred</h6>
+                            <span class="text-success text-bold">@Model.TransferredAssets</span>
                         </div>
                         <div class="col-5">
-                            <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-secondary-gradient text-white ms-auto">
+                            <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-success-gradient text-white ms-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"></path>
                                 </svg>
@@ -139,16 +139,16 @@
         </a>
     </div>
     <div class="col-xl col-md-12">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction">
+        <a asp-area="Users" asp-controller="Disposals" asp-action="Index">
             <div class="card divShadow">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
-                            <h6 class="text-bold text-success">Disposed</h6>
-                            <span class="text-success text-bold">0</span>
+                            <h6 class="text-bold text-secondary">Disposed</h6>
+                            <span class="text-secondary text-bold">@Model.Disposals</span>
                         </div>
                         <div class="col-5">
-                            <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-success-gradient text-white ms-auto">
+                            <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-secondary-gradient text-white ms-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24">
                                     <path d="M21.82,15.42L19.32,19.75C18.83,20.61 17.92,21.06 17,21H15V23L12.5,18.5L15,14V16H17.82L15.6,12.15L19.93,9.65L21.73,12.77C22.25,13.54 22.32,14.57 21.82,15.42M9.21,3.06H14.21C15.19,3.06 16.04,3.63 16.45,4.45L17.45,6.19L19.18,5.19L16.54,9.6L11.39,9.69L13.12,8.69L11.71,6.24L9.5,10.09L5.16,7.59L6.96,4.47C7.37,3.64 8.22,3.06 9.21,3.06M5.05,19.76L2.55,15.43C2.06,14.58 2.13,13.56 2.64,12.79L3.64,11.06L1.91,10.06L7.05,10.14L9.7,14.56L7.97,13.56L6.56,16H11V21H7.4C6.47,21.07 5.55,20.61 5.05,19.76Z" />
                                 </svg>
