--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -254,6 +254,8 @@
 @section scripts{
     <script>
         $(document).ready(() => {
+            hideMenu();
+
             $('.picker').datepicker({
                 autoclose: true,
                 format: 'dd-MM-yyyy',
